Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <img class="img-fluid" src="assets/img/logo.png" width="50%"/>
                     <h1 class="text-white mx-auto my-0 text-uppercase">Pokemon Go UTD</h2>
                     <h2 class="text-white-50">Because Collaboration and Community makes Pokemon GO more fun.</h2>
-                    <a class="btn btn-primary js-scroll-trigger gutter-10 discord" href="https://discord.gg/aeGwdt5"><i class="fab fa-discord"></i> Join our Discord</a>
+                    <a class="btn btn-primary js-scroll-trigger gutter-10 discord" href="http://discord.pokemongoutd.com"><i class="fab fa-discord"></i> Join our Discord</a>
                     <a class="btn btn-primary js-scroll-trigger gutter-10" href="http://map.pokemongoutd.com"><i class="fas fa-map"></i> View the map</a>
                     <br/><br/><br/>
                     <a class="mailtoui" href="mailto:admin@pokemongoutd.com">Contact us</a>
