--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="mx-auto text-center">
                     <img class="img-fluid" src="assets/img/logo.png" width="50%"/>
                     <h1 class="text-white mx-auto my-0 text-uppercase">Pokemon Go UTD</h2>
-                    <h2 class="text-white-50">Because Collaboration and Community makes Pokemon GO more fun.</h2>
+                    <h2 class="text-white-50">Providing raid collaboration tools and a welcoming environment for anyone who plays Pokemon Go at or around UTDallas</h2>
                     <a class="btn btn-primary js-scroll-trigger gutter-10 discord" href="http://discord.pokemongoutd.com"><i class="fab fa-discord"></i> Join our Discord</a>
                     <a class="btn btn-primary js-scroll-trigger gutter-10" href="http://map.pokemongoutd.com"><i class="fas fa-map"></i> View the map</a>
                     <br/><br/><br/>
