--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="Pokemon Go UTD">
-    <meta property="og:description" content="A group of Pokemon Go players that play near and around UTD">
+    <meta property="og:description" content="A community of Pokemon Go players that play near and around UTD, with raid collaboration tools.">
     <meta property="og:image" content="https://pokemongoutd.com/thumbnail.jpg">
     <meta property="og:url" content="http://pokemongoutd.com/index.html">
     <title>Pokemon Go UTD</title>
