--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="Pokemon Go UTD">
-    <meta property="og:description" content="A community of Pokemon Go players that play near and around UTD, with raid collaboration tools.">
+    <meta property="og:description"
+        content="A community of Pokemon Go players that play near and around UTD, with raid collaboration tools.">
     <meta property="og:image" content="https://pokemongoutd.com/thumbnail.jpg">
     <meta property="og:url" content="http://pokemongoutd.com/index.html">
     <title>Pokemon Go UTD</title>
@@ -53,6 +54,16 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mailtoui@1.0.3/dist/mailtoui-min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172949020-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-172949020-1');
+    </script>
+
 </body>
 
 </html>
